# mini_vpn_app

./: .gitignore
android-app/: .gitignore  build-android.sh  build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
apple-core/: Package.swift
backend/: .env.example  README.md  contract_test.go  go.mod  go.sum  sqlc.yaml
contracts/: README.md  backend-api.openapi.yaml  local-control.schema.json  package-lock.json  package.json
contracts/mock/: device.json
contracts/scripts/: validate-local-control.mjs  validate-mocks.mjs
docs/adr/: 2026-06-19-gui-stack-c-shared-rust-core.md
docs/plans/: 2026-06-12-backend.md  (+4 more)
ios-app/: project.yml
macos-app/: .gitignore  README.md
rust-core/: .gitignore  Cargo.toml  verify.sh
rust-core/fixtures/: node-list.json  select-best.json
rust-core/scripts/: sync-mocks.sh
rust-core/src/: backend.rs  lib.rs  models.rs
spikes/rust-ffi-ui/: .gitignore  Cargo.toml  FINDINGS.md  README.md  build-android-app.sh  build-android-host.sh  build-android-so.sh  build-phase2.sh  build-phase3.sh  run.sh
spikes/rust-ffi-ui/AndroidApp/: settings.gradle.kts
spikes/rust-ffi-ui/AndroidApp/app/: build.gradle.kts
spikes/rust-ffi-ui/AndroidApp/app/src/main/: AndroidManifest.xml
spikes/rust-ffi-ui/AndroidApp/app/src/main/java/com/spike/ffi/: MainActivity.kt
spikes/rust-ffi-ui/AsyncDemo/: main.swift
spikes/rust-ffi-ui/KotlinHost/: Main.kt
spikes/rust-ffi-ui/Phase2-App/: project.yml
spikes/rust-ffi-ui/Phase2-App/Sources/: SpikeApp.swift
spikes/rust-ffi-ui/Sources/: main.swift
spikes/rust-ffi-ui/src/: lib.rs
(+121 files in other folders)
