[package]
name = "minivpn_ffi"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "minivpn_ffi"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
